// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`another session active 1`] = `
.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #2C3A73;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c7 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
        style="flex-direction: column;"
      >
        <div
          class="c5"
          color="text.main"
        >
          Another Session Is Active
        </div>
      </div>
      <div
        class="c6"
      >
        This desktop has an active session, connecting to it may close the other session. Do you wish to continue?
      </div>
      <div
        class="c7"
      >
        <button
          class="c8"
          kind="primary"
        >
          Abort
        </button>
        <button
          class="c9"
          kind="secondary"
        >
          Continue
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`connected settings false 1`] = `
.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c13 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c15 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.72);
}

.c15 .c5 {
  color: inherit;
}

.c15:disabled {
  color: rgba(255,255,255,0.3);
}

.c15:disabled {
  color: rgba(255,255,255,0.3);
  cursor: default;
}

.c15:hover:enabled,
.c15:focus:enabled {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c12 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  font-weight: 600;
  font-size: 14px;
  align-self: 'center';
}

.c11 {
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.3);
}

.c11:hover,
.c11:focus {
  background-color: rgba(255,255,255,0.3);
}

.c9 {
  position: relative;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.72);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.72);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.72);"
            title="Clipboard Sharing Disabled"
          />
          <div
            class="c9"
          >
            <button
              class="c10 c11"
              kind="primary"
              title="Warnings"
            >
              <div
                class="c12"
              >
                <span
                  class="c5 c13 icon icon-warning c14"
                  color="light"
                />
                 
                0
              </div>
            </button>
          </div>
        </div>
        <div
          class="c4"
        >
          <button
            class="c15"
            color="text.slightlyMuted"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c16 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <canvas
      style="display: flex; flex: 1;"
    />
  </div>
</div>
`;

exports[`connected settings true 1`] = `
.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c13 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c15 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.72);
}

.c15 .c5 {
  color: inherit;
}

.c15:disabled {
  color: rgba(255,255,255,0.3);
}

.c15:disabled {
  color: rgba(255,255,255,0.3);
  cursor: default;
}

.c15:hover:enabled,
.c15:focus:enabled {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c12 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  font-weight: 600;
  font-size: 14px;
  align-self: 'center';
}

.c11 {
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.3);
}

.c11:hover,
.c11:focus {
  background-color: rgba(255,255,255,0.3);
}

.c9 {
  position: relative;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.72);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.87);"
            title="Directory Sharing Enabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.87);"
            title="Clipboard Sharing Enabled"
          />
          <div
            class="c9"
          >
            <button
              class="c10 c11"
              kind="primary"
              title="Warnings"
            >
              <div
                class="c12"
              >
                <span
                  class="c5 c13 icon icon-warning c14"
                  color="light"
                />
                 
                0
              </div>
            </button>
          </div>
        </div>
        <div
          class="c4"
        >
          <button
            class="c15"
            color="text.slightlyMuted"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c16 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <canvas
      style="display: flex; flex: 1;"
    />
  </div>
</div>
`;

exports[`connection error 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #2C3A73;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c7 a {
  color: #FFFFFF;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c8 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
        style="flex-direction: column;"
      >
        <div
          class="c5"
          color="text.main"
        >
          Error
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
          kind="danger"
        >
          some connection error
        </div>
        Refresh the page to try again.
      </div>
      <div
        class="c8"
      >
        <button
          class="c9"
          kind="secondary"
          width="30%"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`disconnected 1`] = `
.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c13 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c15 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.72);
}

.c15 .c5 {
  color: inherit;
}

.c15:disabled {
  color: rgba(255,255,255,0.3);
}

.c15:disabled {
  color: rgba(255,255,255,0.3);
  cursor: default;
}

.c15:hover:enabled,
.c15:focus:enabled {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c12 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  font-weight: 600;
  font-size: 14px;
  align-self: 'center';
}

.c11 {
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.3);
}

.c11:hover,
.c11:focus {
  background-color: rgba(255,255,255,0.3);
}

.c9 {
  position: relative;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.72);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.72);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.72);"
            title="Clipboard Sharing Disabled"
          />
          <div
            class="c9"
          >
            <button
              class="c10 c11"
              kind="primary"
              title="Warnings"
            >
              <div
                class="c12"
              >
                <span
                  class="c5 c13 icon icon-warning c14"
                  color="light"
                />
                 
                0
              </div>
            </button>
          </div>
        </div>
        <div
          class="c4"
        >
          <button
            class="c15"
            color="text.slightlyMuted"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c16 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c17"
    >
      <div
        class="c18"
      >
        Session successfully disconnected
      </div>
    </div>
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;

exports[`fetch error 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #2C3A73;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c7 a {
  color: #FFFFFF;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c8 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
        style="flex-direction: column;"
      >
        <div
          class="c5"
          color="text.main"
        >
          Error
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
          kind="danger"
        >
          some fetch  error
        </div>
        Refresh the page to try again.
      </div>
      <div
        class="c8"
      >
        <button
          class="c9"
          kind="secondary"
          width="30%"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`invalid processing 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #2C3A73;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c7 a {
  color: #FFFFFF;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c8 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
        style="flex-direction: column;"
      >
        <div
          class="c5"
          color="text.main"
        >
          Error
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
          kind="danger"
        >
          The application has detected an invalid internal application state.         Please file a bug report for this issue at         https://github.com/gravitational/teleport/issues/new?assignees=&labels=bug&template=bug_report.md
        </div>
        Refresh the page to try again.
      </div>
      <div
        class="c8"
      >
        <button
          class="c9"
          kind="secondary"
          width="30%"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`processing 1`] = `
.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c13 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c15 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.72);
}

.c15 .c5 {
  color: inherit;
}

.c15:disabled {
  color: rgba(255,255,255,0.3);
}

.c15:disabled {
  color: rgba(255,255,255,0.3);
  cursor: default;
}

.c15:hover:enabled,
.c15:focus:enabled {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c12 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  font-weight: 600;
  font-size: 14px;
  align-self: 'center';
}

.c11 {
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.3);
}

.c11:hover,
.c11:focus {
  background-color: rgba(255,255,255,0.3);
}

.c9 {
  position: relative;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.72);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.72);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.87);"
            title="Clipboard Sharing Enabled"
          />
          <div
            class="c9"
          >
            <button
              class="c10 c11"
              kind="primary"
              title="Warnings"
            >
              <div
                class="c12"
              >
                <span
                  class="c5 c13 icon icon-warning c14"
                  color="light"
                />
                 
                0
              </div>
            </button>
          </div>
        </div>
        <div
          class="c4"
        >
          <button
            class="c15"
            color="text.slightlyMuted"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c16 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c17"
    />
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;

exports[`tdp processing 1`] = `
.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c13 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c15 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.72);
}

.c15 .c5 {
  color: inherit;
}

.c15:disabled {
  color: rgba(255,255,255,0.3);
}

.c15:disabled {
  color: rgba(255,255,255,0.3);
  cursor: default;
}

.c15:hover:enabled,
.c15:focus:enabled {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c12 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  font-weight: 600;
  font-size: 14px;
  align-self: 'center';
}

.c11 {
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.3);
}

.c11:hover,
.c11:focus {
  background-color: rgba(255,255,255,0.3);
}

.c9 {
  position: relative;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.72);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.72);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.87);"
            title="Clipboard Sharing Enabled"
          />
          <div
            class="c9"
          >
            <button
              class="c10 c11"
              kind="primary"
              title="Warnings"
            >
              <div
                class="c12"
              >
                <span
                  class="c5 c13 icon icon-warning c14"
                  color="light"
                />
                 
                0
              </div>
            </button>
          </div>
        </div>
        <div
          class="c4"
        >
          <button
            class="c15"
            color="text.slightlyMuted"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c16 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c17"
    />
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;

exports[`unintended disconnect 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #2C3A73;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c7 a {
  color: #FFFFFF;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c8 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
        style="flex-direction: column;"
      >
        <div
          class="c5"
          color="text.main"
        >
          Error
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
          kind="danger"
        >
          Session disconnected for an unknown reason.
        </div>
        Refresh the page to try again.
      </div>
      <div
        class="c8"
      >
        <button
          class="c9"
          kind="secondary"
          width="30%"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`webauthn prompt 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 130px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #651FFF;
}

.c9:active {
  background: #354AA4;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
  text-align: center;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  text-align: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 400px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 40px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c8 {
  box-sizing: border-box;
  text-align: center;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
        style="flex-direction: column;"
      >
        <div
          class="c5"
          color="text.main"
        >
          Multi-factor authentication
        </div>
      </div>
      <div
        class="c6"
      >
        
        <div
          class="c7"
        >
          Re-enter your multi-factor authentication in the browser to continue.
        </div>
      </div>
      <div
        class="c8"
      >
        <button
          class="c9"
          kind="primary"
          width="130px"
        >
          OK
        </button>
        <button
          class="c10"
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
